Thu Sep 20 12:40:43 2001  David Helder  <dhelder@umich.edu>
	
	* configure.in (glib_libs): Set -lpthread in gnet-config --libs
	   when pthreads are used.
	* acconfig.h: Added HAVE_LIBPTHREAD manually
	* gnet-config.in: "

	* Makefile.am (EXTRA_DIST): Include gnet.m4.  It was in m4data,
	    not sure what's going on with autoconf.

	* configure.in (glib_libs): Use proper glib-config
	    when getting flags for gnet-config

Mon Aug 27 13:49:46 2001 Andrew Lanoix <alanoix@umich.edu>
	
	* README.win32: Fix typo

Fri Aug 24 10:47:34 2001 Andrew Lanoix <alanoix@umich.edu>
	
	* README.win32: Update

Sun Aug 12 11:59:22 2001  Andrew Lanoix <alanoix@umich.edu>

	* gnet.def: Add missing gnet_inetaddr_new_nonblock &
	   gnet_inetaddr_new_nonblock 

Mon Aug  6 13:31:37 2001  David Helder  <dhelder@umich.edu>

	* tests/dnstest.c (main): Clean-up.  Now blocks by default.
	* src/inetaddr.c (inet_aton): Fix our inet_aton to understand
	   255.255.255.255.  This function was in gnet-private.h.
	
Fri Aug  3 10:59:15 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): Same as
	   below for Windows version.

Fri Aug  3 10:32:45 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): Don't do inet_aton and
	   call callback immediately.  This is confusing for the
	   programmer and can lead to bugs.  Now, either NULL will be
	   returned or the callback will be called later.  PROGRAMMERS:
	   For the old semantics, call gnet_inetaddr_new_nonblock and
	   if it fails, call gnet_inetaddr_new_async.
	  
Wed Jul 25 14:23:16 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Added pthread implementation of
	   gnet_inetaddr_new_async.
	* src/gnet-private.h (_GInetAddrAsyncState ): "
	* configure.in: Check for pthreads

Wed Jun 13 11:29:25 2001  Andrew Lanoix <alanoix@umich.edu>

	* gnet.def: update
	* README.win32: update
	* tests/Makefile.mingw: Build hash.c
	* tests/hash.c: Add a note that extra \r's on win32