@@ -1,3 +1,11 @@
+Fri Sep 21 17:37:50 2001  David Helder  <dhelder@umich.edu>
+
+	* src/inetaddr.c (gnet_inetaddr_new_async): In pthread
+	   version, malloc space for pointers passed to pthread_create.
+	   Otherwise, if we return before the new thread runs, it
+	   crashes.  Duh.  And I taught this stuff?
+	* src/inetaddr.c (gethostbyname_async_child): Delete args.
+
 Thu Sep 20 12:40:43 2001  David Helder  <dhelder@umich.edu>
 	
 	* configure.in (glib_libs): Set -lpthread in gnet-config --libs
